grammars/qvr/vcs/parsers/HEAD/source/grammar.js
    source_file: $ => seq(repeat($._top), $._eof),

    /* Allow blank lines between top-level statements: the scanner
     * emits a NEWLINE for each, and we tolerate them here. */
    _top: $ => choice($._statement, $._newline),

    index_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'index',
      field('name', $.identifier),
      '=',
      field('constructors', $.qiec_index_constructor),
      repeat(seq('|', field('constructors', $.qiec_index_constructor))),
      $._newline,
    ),

    qiec_index_constructor: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '(',
        field('arguments', $.qiec_index_sort),
        repeat(seq(',', field('arguments', $.qiec_index_sort))),
        ')',
      )),
    ),

    /* Family parameters and refinable indices deliberately use different
     * delimiters. Static parameters live in ``[...]``; indices live in
     * ``(...)`` and are marked refinable by the lowering boundary. */
    indexed_family_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'family',
      field('name', $.identifier),
      optional(field('parameters', $.qiec_static_telescope)),
      optional(field('indices', $.qiec_index_telescope)),
      ':',
      field('kind', $.qiec_type_kind),
      $._newline,
      $._indent,
      repeat1(choice(field('constructors', $.qiec_constructor_decl), $._newline)),
      $._dedent,
    ),

    qiec_constructor_decl: $ => seq(
      'constructor',
      field('name', $.identifier),
      optional(field('binders', $.qiec_static_telescope)),
      ':',
      choice(
        seq(
          field('arguments', $._qiec_value_type),
          repeat(seq('*', field('arguments', $._qiec_value_type))),
          '->',
          field('result', $._qiec_type_expr),
        ),
        field('result', $._qiec_value_type),
      ),
      $._newline,
    ),

    effect_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'effect',
      field('name', $.identifier),
      optional(field('binders', $.qiec_static_telescope)),
      $._newline,
      $._indent,
      repeat1(choice(field('operations', $.qiec_operation_decl), $._newline)),
      $._dedent,
    ),

    qiec_operation_decl: $ => seq(
      field('name', $.identifier),
      optional(field('binders', $.qiec_static_telescope)),
      ':',
      choice(
        seq(
          field('arguments', $._qiec_value_type),
          repeat(seq('*', field('arguments', $._qiec_value_type))),
          '->',
          field('result', $._qiec_type_expr),
        ),
        field('result', $._qiec_value_type),
      ),
      $._newline,
    ),

    effect_instance_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'instance',
      field('name', $.identifier),
      ':',
      field('effect', $.qiec_effect_ref),
      $._newline,
    ),

    /* Handler declarations expose only stable signatures and clause grades.
     * Runtime clause bodies remain attachment-owned and are never serialized. */
    handler_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'handler',
      field('name', $.identifier),
      optional(field('binders', $.qiec_static_telescope)),
      'for',
      field('effect', $.qiec_effect_ref),
      ':',
      field('input', $._qiec_value_type),
      '->',
      choice(
        prec(10, seq(
          field('output', $._qiec_type_expr),
          field('options', $.qiec_handler_options),
        )),
        field('output', $._qiec_type_expr),
      ),
      $._newline,
      $._indent,
      repeat1(choice(field('clauses', $._qiec_handler_clause), $._newline)),
      $._dedent,
    ),

    qiec_handler_options: $ => seq(
      field('entries', $.qiec_handler_first_option),
      repeat(seq(',', field('entries', $.qiec_handler_option))),
      optional(','),
      ']',
    ),

    /* The opening bracket and first key form one lexical token. This keeps
     * ``A [coverage=total]`` disjoint from the type application ``A[T]``
     * without imposing whitespace-sensitive parsing. */
    qiec_handler_first_option: $ => choice(
      seq(
        alias(token(/\[[ \t]*coverage/), $.qiec_handler_coverage_key),
        '=',
        field('coverage', choice('total', 'partial')),
      ),
      seq(
        alias(token(/\[[ \t]*forwards/), $.qiec_handler_forwards_key),
        '=',
        field('forwards', choice('unknown', 'none')),
      ),
      seq(
        alias(token(/\[[ \t]*introduces/), $.qiec_handler_introduces_key),
        '=',
        field('introduced', $.qiec_effect_row),
      ),
      seq(
        alias(token(/\[[ \t]*implementation/), $.qiec_handler_implementation_key),
        '=',
        field('implementation', choice('authored', 'foreign')),
      ),
    ),

    qiec_handler_option: $ => choice(
      seq('coverage', '=', field('coverage', choice('total', 'partial'))),
      seq('forwards', '=', field('forwards', choice('unknown', 'none'))),
      seq('introduces', '=', field('introduced', $.qiec_effect_row)),
      seq(
        'implementation',
        '=',
        field('implementation', choice('authored', 'foreign')),
      ),
    ),

    _qiec_handler_clause: $ => choice(
      $.qiec_handler_return_clause,
      $.qiec_handler_operation_clause,
    ),

    /* What the handler does with a value the handled computation returns.
     * At most one per handler; the checker enforces that. */
    qiec_handler_return_clause: $ => seq(
      'return',
      field('binder', $.qiec_local_binding),
      '=>',
      $._newline,
      $._indent,
      field('body', $._qiec_computation),
      $._dedent,
    ),

    /* One operation. The body form binds the operation's static and value
     * arguments and may invoke ``resume``; the bodiless form is a signature
     * for a handler whose implementation is supplied at runtime, which the
     * declaration must mark ``implementation=foreign``. */
    qiec_handler_operation_clause: $ => seq(
      field('operation', $.identifier),
      optional(field('binders', $.qiec_static_telescope)),
      optional(seq(
        '(',
        optional(seq(
          field('parameters', $.qiec_local_binding),
          repeat(seq(',', field('parameters', $.qiec_local_binding))),
          optional(','),
        )),
        ')',
      )),
      'resumes',
      field('grade', $.qiec_resumption_grade),
      choice(
        $._newline,
        seq(
          '=>',
          $._newline,
          $._indent,
          field('body', $._qiec_computation),
          $._dedent,
        ),
      ),
    ),

    qiec_resumption_grade: _ => choice('0', 'aff', '1', 'omega'),

    /* ``define`` remains the language's binding keyword. The typed
     * computation header makes this alternative disjoint from the existing
     * morphism-expression ``define NAME = EXPR`` form. */
    computation_decl: $ => seq(
      optional(field('docs', $.doc_comment_group)),
      'define',
      field('name', $.identifier),
      optional(field('binders', $.qiec_static_telescope)),
      optional(seq(
        '(',
        optional(seq(
          field('parameters', $.qiec_value_parameter),
          repeat(seq(',', field('parameters', $.qiec_value_parameter))),
          optional(','),
        )),
        ')',
      )),
      ':',
      field('result', $._qiec_type_expr),
      field('row', $.qiec_effect_row),
      '=',
      $._newline,
      $._indent,
      field('body', $._qiec_computation),
      $._dedent,
    ),

    qiec_value_parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._qiec_type_expr),
    ),

    // -----------------------------------------------------------------
    // QIEC static language
    // -----------------------------------------------------------------

    qiec_static_telescope: $ => seq(
      '[',
      field('binders', $._qiec_static_binder),
      repeat(seq(',', field('binders', $._qiec_static_binder))),
      optional(','),
      ']',
    ),

    _qiec_static_binder: $ => choice(
      $.qiec_type_binder,
      $.qiec_index_binder,
      $.qiec_effect_binder,
    ),

    qiec_type_binder: $ => seq(
      field('name', $.identifier),
      ':',
      field('kind', $.qiec_type_kind),
    ),

    qiec_effect_binder: $ => seq(
      field('name', $.identifier),
      ':',
      field('kind', $.qiec_effect_kind),
    ),

    qiec_index_binder: $ => seq(
      field('name', $.identifier),
      ':',
      field('sort', $.qiec_index_sort),
    ),

    qiec_index_telescope: $ => seq(
      '(',
      field('binders', $.qiec_index_binder),
      repeat(seq(',', field('binders', $.qiec_index_binder))),
      optional(','),
      ')',
    ),

    qiec_type_kind: _ => 'Type',
    qiec_effect_kind: _ => 'Effect',

    qiec_index_sort: $ => choice(
      alias('Nat', $.qiec_nat_sort),
      seq(
        alias('Shape', $.qiec_shape_sort),
        optional(seq('[', field('rank', $.integer), ']')),
      ),
      seq(
        alias('Context', $.qiec_context_sort),
        '[',
        field('signature', $.identifier),
        ']',
      ),
      $.qiec_user_index_sort,
    ),

    _qiec_type_expr: $ => choice(
      $.qiec_function_type,
      $.qiec_product_type,
      $.qiec_type_application,
      $.qiec_type_name,
      $.qiec_type_paren,
    ),

    /* A non-arrow, non-product type factor. Declaration signatures use this
     * rule on the left of their own ``*`` / ``->`` separators so Panproto's
     * named ``arguments`` and ``result`` fields cannot be swallowed by a
     * nested expression node. Parentheses remain available when a genuinely
     * higher-order argument type is needed. */
    _qiec_value_type: $ => choice(
      $.qiec_type_application,
      $.qiec_type_name,
      $.qiec_type_paren,
    ),

    qiec_type_application: $ => prec(4, seq(
      field('constructor', $.identifier),
      choice(
        seq(
          '[',
          field('arguments', $.qiec_static_argument),
          repeat(seq(',', field('arguments', $.qiec_static_argument))),
          optional(','),
          ']',
          optional(seq(
            '(',
            field('indices', $._qiec_index_term),
            repeat(seq(',', field('indices', $._qiec_index_term))),
            optional(','),
            ')',
          )),
        ),
        seq(
          '(',
          field('indices', $._qiec_index_term),
          repeat(seq(',', field('indices', $._qiec_index_term))),
          optional(','),
          ')',
        ),
      ),
    )),

    qiec_static_argument: $ => field('value', $._qiec_type_expr),
    qiec_type_name: $ => field('name', $.identifier),
    _qiec_index_term: $ => choice(
      $.qiec_index_application,
      $.qiec_index_name,
      $.qiec_index_literal,
      $.qiec_shape_index,
    ),

    qiec_index_application: $ => seq(
      field('constructor', $.identifier),
      '(',
      field('arguments', $._qiec_index_term),
      repeat(seq(',', field('arguments', $._qiec_index_term))),
      optional(','),
      ')',
    ),

    qiec_index_name: $ => field('name', $.identifier),
    qiec_effect_ref: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '[',
        field('arguments', $.qiec_static_argument),
        repeat(seq(',', field('arguments', $.qiec_static_argument))),
        optional(','),
        ']',
      )),
    ),

    qiec_effect_row: $ => seq('!', field('row', $.qiec_effect_row_literal)),

    qiec_effect_row_literal: $ => seq(
      '{',
      optional(choice(
        seq(
          field('entries', $.qiec_row_entry),
          repeat(seq(',', field('entries', $.qiec_row_entry))),
          optional($._qiec_row_tail),
        ),
        $._qiec_row_tail,
      )),
      '}',
    ),

    _qiec_row_tail: $ => seq(
      '|',
      field('tail', $.identifier),
      optional(seq(
        'lacks',
        field('lacks', $.identifier),
        repeat(seq(',', field('lacks', $.identifier))),
      )),
    ),

    qiec_row_entry: $ => field('name', $.identifier),

    // -----------------------------------------------------------------
    // QIEC value and computation terms
    // -----------------------------------------------------------------

    _qiec_computation: $ => choice(
      $.qiec_bind_computation,
      $.qiec_pure_binding,
      $.qiec_sequence_computation,
      $.qiec_return_computation,
      $.qiec_handle_computation,
      $.qiec_instance_computation,
      $.qiec_case_computation,
      $.qiec_if_computation,
      $.qiec_perform_computation,
      $.qiec_call_computation,
      $.qiec_resume_computation,
    ),

    /* A pure binding names a serializable expression; the monadic form
     * below names a computation's result. They are separate nodes because
     * they have separate typing rules, and one spelling each. */
    qiec_pure_binding: $ => seq(
      'let',
      field('binder', $.qiec_local_binding),
      '=',
      field('value', $._qiec_value),
      $._newline,
      field('then', $._qiec_computation),
    ),

    qiec_bind_computation: $ => seq(
      'let',
      field('binder', $.qiec_local_binding),
      '<-',
      field('first', $._qiec_inline_computation),
      field('then', $._qiec_computation),
    ),

    qiec_sequence_computation: $ => seq(
      field('first', $._qiec_inline_computation),
      field('then', $._qiec_computation),
    ),

    qiec_return_computation: $ => seq(
      'return',
      field('value', $._qiec_value),
      $._newline,
    ),

    _qiec_inline_computation: $ => choice(
      $.qiec_perform_computation,
      $.qiec_call_computation,
      $.qiec_resume_computation,
    ),

    /* Ordinary application is the one call syntax. It is disjoint from an
     * effect request, which is qualified by an instance, and from a
     * constructor value, which is introduced by ``construct``. The value
     * parentheses are required even when empty, so a nullary call is not
     * read as a bare variable. */
    qiec_call_computation: $ => seq(
      field('callee', $.identifier),
      optional(seq(
        '[',
        field('static_arguments', $.qiec_static_argument),
        repeat(seq(',', field('static_arguments', $.qiec_static_argument))),
        optional(','),
        ']',
      )),
      '(',
      optional(seq(
        field('arguments', $._qiec_value),
        repeat(seq(',', field('arguments', $._qiec_value))),
        optional(','),
      )),
      ')',
      $._newline,
    ),

    /* Invoking the continuation of the enclosing handler clause. The
     * resumption is not a named local, so there is one way to invoke it and
     * no second call syntax to keep in step. */
    qiec_resume_computation: $ => seq(
      'resume',
      '(',
      optional(field('value', $._qiec_value)),
      ')',
      $._newline,
    ),

    qiec_perform_computation: $ => seq(
      'perform',
      field('request', $.qiec_effect_request),
      $._newline,
    ),

    qiec_effect_request: $ => seq(
      field('instance', $.identifier),
      '.',
      field('operation', $.identifier),
      optional(seq(
        '[',
        field('static_arguments', $.qiec_static_argument),
        repeat(seq(',', field('static_arguments', $.qiec_static_argument))),
        optional(','),
        ']',
      )),
      '(',
      optional(seq(
        field('arguments', $._qiec_value),
        repeat(seq(',', field('arguments', $._qiec_value))),
        optional(','),
      )),
      ')',
    ),

    qiec_handle_computation: $ => seq(
      'handle',
      field('instance', $.identifier),
      'with',
      field('handler', $.qiec_handler_application),
      'in',
      $._newline,
      $._indent,
      field('body', $._qiec_computation),
      $._dedent,
    ),

    /* Lexically scoped allocation. The binder is live only in the body,
     * which is what keeps the instance and any row mentioning it from
     * escaping. */
    qiec_case_static_binder: $ => field('name', $.identifier),
